k3s/contour/base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: contour-internal
  namespace: projectcontour
spec:
  gatewayClassName: contour
  listeners:
    - name: effectful-co
      port: 8000
      protocol: HTTP
      hostname: '*.k3s.effectful.co'
      allowedRoutes:
        namespaces:
          from: All
    - name: effectful-co-tls
      port: 8443
      protocol: HTTPS
      hostname: '*.k3s.effectful.co'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-k3s-effectful-co
            kind: Secret
